--- a/style.css
+++ b/style.css
@@ -11,3 +11,46 @@ h2{
     border : solid;
     border-color : blue;
 }
+
+.thumbnail_grid{
+    display : grid;
+    grid-template-columns: 1fr 1fr 1fr;
+}
+
+.thumbnail{
+    width:100%;
+}
+
+#stat_bar{
+    display:grid;
+    grid-template-columns : 1fr 1fr 1fr;
+
+    border-top : 1px solid grey;
+    border-bottom : 1px solid grey;
+
+    margin-top : 5px;
+    margin-bottom : 5px;
+}
+
+.stat{
+    text-align:center;
+}
+
+.circle_pic{
+    border : solid white 1px;
+    border-radius: 50%;
+
+    width: 100%;
+    height : 100%;
+    object-fit: cover;
+}
+
+#profile_pic{
+    width:50px;
+    height:50px;
+}
+
+.highlight_pic{
+    width:35px;
+    height:35px;
+}
