--- a/style.css
+++ b/style.css
@@ -19,11 +19,11 @@ h2{
     display:grid;
     grid-template-rows: 1fr 1fr;
 
-    height:50px;
+    height : 15vw;
 }
 
 #id{
-    font-size:18px;
+    font-size:6vw;
     font-weight:100;
 }
 
@@ -31,7 +31,7 @@ button{
     height : 80%;
     width : 95;
 
-    font-size : 10px;
+    font-size : 3vw;
     background-color : white;
     border : 1px solid gray;
     border-radius: 3px;
@@ -76,13 +76,13 @@ button{
 }
 
 #profile_pic{
-    width:50px;
-    height:50px;
+    width:15vw;
+    height:15vw;
 }
 
 .highlight_pic{
-    width:35px;
-    height:35px;
+    width:10vw;
+    height:10vw;
 
     margin-left : auto;
     margin-right : auto;
@@ -92,7 +92,7 @@ button{
 
 #highlight_area{
     display:grid;
-    grid-template-columns:45px 45px 1fr;
+    grid-template-columns:12vw 12vw 1fr;
 }
 
 #top{
@@ -100,13 +100,14 @@ button{
     grid-template-columns: 4fr 7fr 4fr;
     border-bottom : solid gray 0.1px;
     padding-bottom : 3px;
-    margin-bottom : 10px;
-    height:30px;
+    margin-bottom : 3vw;
+    height:10vw;
+    min-height : 10vw;
 }
 
 #top_img{
-    width:100px;
-    height:30px;
+    width:30vw;
+    height:10vw;
     margin : auto;
 }
 
@@ -127,7 +128,7 @@ button{
     border : solid gray 1px;
     border-radius: 3px;
 
-    font-size : 10px;
+    font-size : 3vw;
     font-weight: 100;
 }
 
@@ -136,12 +137,12 @@ i{
 }
 
 #top i{
-    font-size : 14px;
+    font-size : 4vw;
 }
 
 #top div{
     text-align:center;
-    padding-top : 1px;
+    padding-top : 1vw;
 }
 
 #sub_icons{
@@ -149,11 +150,15 @@ i{
     grid-template-columns: 1fr 1fr 1fr 1fr 1fr;
 
     text-align: center;
-    font-size : 15px;
+    font-size : 5vw;
 
-    height : 30px;
+    height : 8vw;
 }
 
 .selected{
     border-bottom : solid gray 3px;
+}
+
+body{
+    font-size : 3vw;
 }
